samples/_failures_safe/1761346216_161d30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d044df91.c: In function ‘main’:
./samples/SAFE/__tmp_d044df91.c:148:5: error: expected declaration or statement at end of input
  148 |     input_matrix(&mat2, "B");
      |     ^~~~~~~~~~~~
